frontend/src/app/measurement-settings/measurement-settings.component.scss
.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    min-height: calc(90vh - 220px);      
    padding: 20px;
}

h1 {
    font-size: 2.5em;
    font-weight: bold;
    margin-bottom: 20px;
}

.input-container {
    display: flex;
    flex-direction: column;
    background-color: rgba(159, 159, 159, 0.333);
    box-shadow: 0px 0px 7.5px rgb(0, 0, 0.1);
    border-radius: 15px;
    padding: 20px;
    max-width: 650px;       
    width: 100%;  
    gap: 10px;
    min-height: 50vh;
    margin-top: 50px;
}

.button-container{
    display: flex;
    flex-direction: column; 
    align-items: center;
    gap: 15px;
    position: relative;
    padding-top: 50px
}

.buttons-row {
    display: flex;
    flex-direction: row;     
    justify-content: center; 
    gap: 10px;               
}

.saveMessage {
    position: absolute;
    top: 100%;
    color: green;
    font-size: 1.3em;
    margin-top: 25px;
}

